--- a/statics/styles/goods.css
+++ b/statics/styles/goods.css
@@ -203,16 +203,17 @@
 }
 
 #photos {
-	width: 377px;
-	height: 70px;
-	line-height: 64px;
+	/* width: 377px; */
+	height: 68px;
+	/* line-height: 64px; */
 	margin: 0;
 	overflow: hidden;
-	margin-bottom: 20px;
+	/* margin-bottom: 20px; */
 }
 
 #showArea {
-	width: 900px;
+	/* width: 900px; */
+    overflow: hidden;
 }
 
 #showArea img {
@@ -226,7 +227,7 @@
 
 #attributes div.attributes-list {
 	clear: both;
-	margin-bottom: 10px;
+	margin: 10px 0;
 	border: 1px solid #e6e6e6;
 	border-radius: 4px;
 }
@@ -304,6 +305,7 @@
 	width: 980px!important;
 	margin: 20px auto;
 }
+#detail .tm-clear {overflow:hidden;}
 
 .tm-detail-meta {
 	width: 980px;
