修复 商品库预览属性选择颜色

--- a/statics/styles/goods.css
+++ b/statics/styles/goods.css
@@ -340,9 +340,12 @@
     line-height: 22px;
 }
 #detail .goods_spec .green {
-    background-color: #47aa4d;
+    background-color: #3498db;
     color: #FFF!important;
     border: 0!important
+}
+.admin_detail #detail .goods_spec .green {
+    background-color: #3993ba;
 }
 .admin_detail #detail, .admin_detail .tm-detail-meta {
 	width:100%!important;
