--- a/statics/styles/goods.css
+++ b/statics/styles/goods.css
@@ -354,7 +354,10 @@
 .fileupload-btn-product, .fileupload-btn-product:hover, .fileupload-btn-product:after{
 	width: 220px;
 	height: 220px;
+	margin-left: 0;
 }
 .fileupload-btn-product .fileupload-exists {
 	top:31%;
 }
+.product-edit .form-horizontal .control-group-small .controls {
+ margin-left: 100px}
