--- a/statics/styles/goods.css
+++ b/statics/styles/goods.css
@@ -172,6 +172,40 @@
 	font-size: 20px;
 }
 
+#detail .goods-products{
+	clear: both;
+	font-size: 20px;
+	color:#666;
+}
+#detail .goods-pra{
+	clear: both;
+}
+#detail .goods-pra .pra{
+	font-size: 20px;
+	color:#666;
+}
+#detail .goods-pra .pra .pra-handle{
+	float:right;
+}
+#detail .goods-pra .pra .pra-edit{
+	display:inline-block;
+	font-size:17px;
+	padding-right:15px;
+}
+#detail .product-goods-name-style{
+	height: 40px;
+	line-height: 20px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+#detail .goods-name-style{
+	height: 72px;
+	line-height: 35px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	font-size:17px;
+}
+
 #tbody {
 	width: 460px;
 	margin: 0 auto;
