--- a/statics/styles/admin_goods.css
+++ b/statics/styles/admin_goods.css
@@ -207,13 +207,12 @@
 }
 
 #tbody {
-	width: 460px;
-	margin: 0 auto;
+	margin-bottom:10px;
 }
 
 #mainbody {
-	width: 418px;
-	height: 418px;
+	/*width: 418px;
+	height: 418px;*/
 	border: 1px solid rgba(0,0,0,.05);
 	border-radius: 4px;
 	display: table-cell;
@@ -237,16 +236,15 @@
 #goright {
 	float: right;
 	clear: right;
-	margin: 6px 40px 0 0px;
+	margin: 6px 0px 0 0px;
 }
 
 #photos {
-	/* width: 377px; */
-	height: 68px;
-	/* line-height: 64px; */
+	height: 70px;
+	line-height: 64px;
 	margin: 0;
 	overflow: hidden;
-	/* margin-bottom: 20px; */
+	margin-bottom: 20px;
 }
 
 #showArea {
@@ -320,16 +318,16 @@
 
 #detail {
 	border: none;
-	width: 980px!important;
+	/*width: 980px!important;*/
 	margin: 20px auto;
 }
-#detail .tm-clear {overflow:hidden;}
+/*#detail .tm-clear {overflow:hidden;}*/
 
 .tm-detail-meta {
-	width: 980px;
+	/*width: 980px;
 	position: relative;
 	z-index: 100;
-	min-height: 600px;
+	min-height: 600px;*/
 }
 
 .goods-promote {
