--- a/statics/styles/goods.css
+++ b/statics/styles/goods.css
@@ -174,15 +174,13 @@
 
 #detail .goods-products{
 	clear: both;
-	font-size: 20px;
-	color:#666;
+	font-size: 18px;
 }
 #detail .goods-pra{
 	clear: both;
 }
 #detail .goods-pra .pra{
-	font-size: 20px;
-	color:#666;
+	font-size: 18px;
 }
 #detail .goods-pra .pra .pra-handle{
 	float:right;
@@ -208,7 +206,8 @@
 
 #tbody {
 	width: 460px;
-	margin: 0 auto;
+	/*margin: 0 auto;*/
+	margin-bottom:10px;
 }
 
 #mainbody {
@@ -244,9 +243,7 @@
 	/* width: 377px; */
 	height: 68px;
 	/* line-height: 64px; */
-	margin: 0;
 	overflow: hidden;
-	/* margin-bottom: 20px; */
 }
 
 #showArea {
